examples/test/testpolicy4160.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4160
  namespace: namespace98
spec:
  podSelector:
    matchLabels:
      key41: value38
      key20: value12
      key47: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value28
          key31: value25
      podSelector:
        matchLabels:
          key1: value10
          key47: value16
          key2: value48
